no body scrollbar + fix layout stuff

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -12,8 +12,23 @@ html, body {
     -moz-box-sizing:border-box;
 }
 
-scrollbar{
-    -moz-appearance: none !important;
+::-webkit-scrollbar {
+    width: 0;
+}
+
+::-webkit-scrollbar-track {
+    background: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    background: none;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background: none;
 }
 
 div.curtain {
@@ -247,13 +262,14 @@ section.code {
     height: 100%;
     position:absolute;
     top: 0;
+    min-height: 600px;
 }
 
 section.code div.code-content {
     margin: 0px 2.5% 0px 2.5%;
     width: 95%;
-    position: absolute;
-    height: 100%;
+    position: relative;
+    height: 260px;
     padding: 210px 0 0 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -296,10 +312,10 @@ section.code button.orange-button.reset {
 
 section.code div.editor-container {
     width: 95%;
-    min-height: 414px;
     position: absolute;
     margin: 10px 2.5% 0 2.5%;
-    bottom: 100px;
+    bottom: 40px;
+    top: 260px;
 }
 
 section.code div.code-content a {
@@ -320,8 +336,8 @@ section.code div.code-content a:hover {
 }
 
 #editor {
-    min-height: 480px;
     width:100%;
+    height: 100%;
 }
 
 article section footer {
